@@ -382,6 +382,36 @@ initcups (void)
   INT_CONSTANT (IPP_PRINTER_PROCESSING);
   INT_CONSTANT (IPP_PRINTER_STOPPED);
 
+  // IPP finishings
+  INT_CONSTANT (IPP_FINISHINGS_NONE);
+  INT_CONSTANT (IPP_FINISHINGS_STAPLE);
+  INT_CONSTANT (IPP_FINISHINGS_PUNCH);
+  INT_CONSTANT (IPP_FINISHINGS_COVER);
+  INT_CONSTANT (IPP_FINISHINGS_BIND);
+  INT_CONSTANT (IPP_FINISHINGS_SADDLE_STITCH);
+  INT_CONSTANT (IPP_FINISHINGS_EDGE_STITCH);
+  INT_CONSTANT (IPP_FINISHINGS_FOLD);
+  INT_CONSTANT (IPP_FINISHINGS_TRIM);
+  INT_CONSTANT (IPP_FINISHINGS_BALE);
+  INT_CONSTANT (IPP_FINISHINGS_BOOKLET_MAKER);
+  INT_CONSTANT (IPP_FINISHINGS_JOB_OFFSET);
+  INT_CONSTANT (IPP_FINISHINGS_STAPLE_TOP_LEFT);
+  INT_CONSTANT (IPP_FINISHINGS_STAPLE_BOTTOM_LEFT);
+  INT_CONSTANT (IPP_FINISHINGS_STAPLE_TOP_RIGHT);
+  INT_CONSTANT (IPP_FINISHINGS_STAPLE_BOTTOM_RIGHT);
+  INT_CONSTANT (IPP_FINISHINGS_EDGE_STITCH_LEFT);
+  INT_CONSTANT (IPP_FINISHINGS_EDGE_STITCH_TOP);
+  INT_CONSTANT (IPP_FINISHINGS_EDGE_STITCH_RIGHT);
+  INT_CONSTANT (IPP_FINISHINGS_EDGE_STITCH_BOTTOM);
+  INT_CONSTANT (IPP_FINISHINGS_STAPLE_DUAL_LEFT);
+  INT_CONSTANT (IPP_FINISHINGS_STAPLE_DUAL_TOP);
+  INT_CONSTANT (IPP_FINISHINGS_STAPLE_DUAL_RIGHT);
+  INT_CONSTANT (IPP_FINISHINGS_STAPLE_DUAL_BOTTOM);
+  INT_CONSTANT (IPP_FINISHINGS_BIND_LEFT);
+  INT_CONSTANT (IPP_FINISHINGS_BIND_TOP);
+  INT_CONSTANT (IPP_FINISHINGS_BIND_RIGHT);
+  INT_CONSTANT (IPP_FINISHINGS_BIND_BOTTOM);
+
   // IPP errors
   INT_CONSTANT (IPP_OK);
   INT_CONSTANT (IPP_OK_SUBST);
